apps/generic/overlays/transmission/patches/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: transmission
spec:
  template:
    spec:
      volumes:
        - name: dev-tun
          hostPath:
            path: /dev/net/tun
            type: CharDevice
        - name: watch-dir
          emptyDir: {}
      dnsPolicy: ClusterFirst
      dnsConfig: { }
      containers:
        # Transmission
        - name: container
          image: docker.io/linuxserver/transmission:4.0.6
          imagePullPolicy: Always
          resources:
            requests:
              cpu: "100m"
              memory: "100Mi"
            limits:
              cpu: "1000m"
              memory: "2000Mi"
          livenessProbe:
            exec:
              command:
                - sh
                - -c
                - '[ "$(curl -s https://ifconfig.co/city)" != "${VPN_CITY}" ]'
            initialDelaySeconds: 45
            periodSeconds: 60
            failureThreshold: 3
            timeoutSeconds: 5
            httpGet:
              $patch: delete
          readinessProbe:
            failureThreshold: 3
            initialDelaySeconds: 10
            periodSeconds: 10
            successThreshold: 1
            tcpSocket:
              port: 9091
            timeoutSeconds: 30
          volumeMounts:
            - name: yasr-volume
              mountPath: /data
              subPath: configs/transmission/
            - name: yasr-volume
              mountPath: /config
              subPath: configs/transmission/
            - name: watch-dir
              mountPath: /watch
          ports:
            - name: http
              containerPort: 9091
              protocol: TCP
        # VPN
        - name: vpn
          image: docker.io/qmcgaw/gluetun:v3.40.0
          imagePullPolicy: IfNotPresent
          securityContext:
            privileged: true
            capabilities:
              add:
                - NET_ADMIN
          livenessProbe:
            exec:
              command:
                - sh
                - -c
                - '[ "$(curl -s https://ifconfig.co/city)" != "${VPN_CITY}" ]'
            initialDelaySeconds: 45
            periodSeconds: 60
            failureThreshold: 3
            timeoutSeconds: 5
          volumeMounts:
            - name: yasr-volume
              mountPath: /vpn
              subPath: configs/openvpn/
            - mountPath: /dev/net/tun
              name: dev-tun
            - name: yasr-volume
              mountPath: /tmp/gluetun/
              subPath: configs/openvpn/
        # Transmission port forward
        - name: transmission-pia-port-forward
          image: docker.io/gandazgul/transmission-pia-port-forward:v8801db4
          imagePullPolicy: IfNotPresent
          resources:
            requests:
              cpu: 50m
              memory: 50Mi
            limits:
              cpu: 50m
              memory: 50Mi
          volumeMounts:
            - name: yasr-volume
              mountPath: /data
              subPath: configs/openvpn/
