apps/generic/overlays/transmission/patches/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: transmission
spec:
  ports:
    - name: http
      port: 9091
      protocol: TCP
      targetPort: http
    - name: mousehole
      port: 5010
      protocol: TCP
      targetPort: mousehole
