apps/generic/overlays/transmission/patches/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: transmission
  annotations:
    nginx.ingress.kubernetes.io/app-root: /transmission/web/
    forecastle.stakater.com/appName: "Transmission"
    forecastle.stakater.com/group: "Media"
    forecastle.stakater.com/expose: "true"
    forecastle.stakater.com/icon: "https://transmissionbt.com/assets/images/Transmission_icon.png"
spec:
  rules:
    - host: transmission.dumbhome.uk
      http:
        paths:
          - path: /mousehole
            pathType: Prefix
            backend:
              service:
                name: transmission
                port:
                  name: mousehole
